# Mobile-Code-Studio

./: Feature --> Core  Mermaid.js  README.md  build.gradle.kts  coding_standards.md  error.md  fix_build_errors.md  fix_termux_shared_errors.md  git_diff.txr  git_log.txt  git_status.txt  gradle.properties  migrate_emulator_java_to_kotlin.md  migrate_shared_java_to_kotlin.md  refactor_core_to_common.md  refactor_setup_flow.md  refactor_termux_core.md  requirements.md  roadmap2.md  settings.gradle.kts  setup_hilt_di_master.md  termux_installer_core_task.md  termux_integration.md
.acside/editor/: openedFiles.json  openedFiles.json.bak
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  vcspace.cpp
app/src/main/cpp/terminal/: executor.cpp
core/: build.gradle.kts
core/common/: build.gradle.kts
core/data/: build.gradle.kts
core/domain/: build.gradle.kts
core/ui/: build.gradle.kts
core/utils/: build.gradle.kts
data/: build.gradle.kts
data/editor/: build.gradle.kts
data/file-browser/: build.gradle.kts
data/terminal/: build.gradle.kts
domain/: build.gradle.kts
domain/dashboard/: build.gradle.kts
domain/editor/: build.gradle.kts
domain/file-browser/: build.gradle.kts
domain/terminal/: build.gradle.kts
feature/dashboard/: build.gradle.kts
feature/debug/: build.gradle.kts
feature/editor/: build.gradle.kts
feature/file-browser/: build.gradle.kts
feature/onboarding/: build.gradle.kts
feature/settings/: build.gradle.kts
feature/setup/: build.gradle.kts
feature/terminal/: build.gradle.kts
gradle/: libs.versions.toml
(+212 files in other folders)
